# ESTM

./: .gitignore  Cargo.toml  README.md
frontend/: index.html  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  index.tsx
frontend/src/managers/: BracketDiagramManager.tsx  CacheManager.tsx  ConfirmationManager.tsx  LiveDataManager.tsx  MatchManager.tsx  SideBarManager.tsx
frontend/src/pages/: Dash.css  Dash.tsx  Login.css  Login.tsx
frontend/src/pages/Dash/: Brackets.css  Brackets.tsx  Matches.css  Matches.tsx  Teams.css  Teams.tsx
frontend/src/structs/: Bracket.tsx  Match.tsx  Player.tsx  Team.tsx
src/: apphandler.rs  db_controller.rs  main.rs  util.rs
src/api/v1/: live.rs  mod.rs
src/api/v1/auth/: login.rs  mod.rs  verify.rs
src/api/v1/brackets/: current.rs  get_match.rs  mod.rs  winner.rs
src/api/v1/matches/: cancel.rs  create.rs  delete.rs  get.rs  list.rs  mod.rs  next.rs  rename.rs  select.rs  selected.rs  start.rs
src/api/v1/teams/: colour.rs  create.rs  delete.rs  list.rs  mod.rs  player.rs  rename.rs
src/apphandler/: authentication_provider.rs  brackets_manager.rs  config_manager.rs  live_data_manager.rs  match_controller.rs  team_manager.rs
src/structs/: bracket.rs  config.rs  game.rs  mod.rs  player.rs  session.rs  team.rs
src/util/: generate_base_brackets.rs  verify_auth.rs
