[package]
name = "ESTM"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = [ "macros", "ws" ] }
bson = "2.11.0"
chrono = "0.4.38"
dotenvy = "0.15.7"
futures-util = "0.3.30"
mongodb = "3.0.1"
nanoid = "0.4.0"
rand = "0.8.5"
rng = "0.1.0"
serde = "1.0.209"
serde_json = "1.0.127"
tokio = "1.39.3"
